--- a/electron/index.html
+++ b/electron/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <svg viewBox="0 0 100 100">
-        <text x="50%" y="30%" text-anchor="middle" dominant-baseline="central" id="hand">👏</text>
+        <text x="50%" y="30%" text-anchor="middle" dominant-baseline="central" id="emoji">👏</text>
         <text x="50%" y="60%" text-anchor="middle" dominant-baseline="central" id="count">0</text>
       </svg>
   
