create clap window by setting window

--- a/electron/setting.html
+++ b/electron/setting.html
@@ -10,7 +10,7 @@
   <body>
     <div id="setting">
       <p>
-        <input type="text" id="eventName" />
+        <input type="text" id="eventCode" />
       </p>
       <p>
         <button id="enter">Enter code</button>
