--- a/electron/public/eventCreate.html
+++ b/electron/public/eventCreate.html
@@ -17,6 +17,6 @@
       </p>
     </div>
     <!-- You can also require other files to run in this process -->
-    <script src="./settingRenderer.js"></script>
+    <script src="./eventCreate.js"></script>
   </body>
 </html>
