create create view

--- a/electron/public/setting.html
+++ b/electron/public/setting.html
@@ -9,12 +9,8 @@
   </head>
   <body>
     <div id="setting">
-      <p>
-        <button id="create">Event Create</button>
-      </p>
-      <p>
-        <button id="setting">Event Setting</button>
-      </p>
+      <button id="createButton">Event Create</button>
+      <button id="settingButton">Event Setting</button>
     </div>
     <!-- You can also require other files to run in this process -->
     <script src="./settingPage.js"></script>
