--- a/electron/public/eventCreate.html
+++ b/electron/public/eventCreate.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'">
+    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'">
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
+    <div id="input">
+      <p>
+        Emoji : <input type="text" id="emoji" placeholder="👏"/>
+      </p>
+      <p>
+        <button id="enter">Create Event</button>
+      </p>
+    </div>
     <div id="setting">
-      <p>
-        <input type="text" id="eventCode" />
-      </p>
-      <p>
-        <button id="enter">Enter code</button>
-      </p>
+      <p id="eventCodeTitle">Event Code</p>
+      <p id="eventId"></p>
+      <p id="url"></p>
     </div>
     <!-- You can also require other files to run in this process -->
     <script src="./eventCreate.js"></script>
