organize css ID etc.

--- a/electron/public/eventCreate.html
+++ b/electron/public/eventCreate.html
@@ -16,7 +16,7 @@
         <button id="enter">Create Event</button>
       </p>
     </div>
-    <div id="setting">
+    <div id="created">
       <p id="eventCodeTitle">Event Code</p>
       <p id="eventId"></p>
       <p id="url"></p>
