--- a/electron/public/menu.html
+++ b/electron/public/menu.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
-    <div id="setting">
-      <button id="createButton">Event Create</button>
+    <div id="menu">
+      <button id="createButton">Create Event</button>
       <button id="settingButton">Event Setting</button>
     </div>
     <!-- You can also require other files to run in this process -->
-    <script src="./settingPage.js"></script>
+    <script src="./menu.js"></script>
   </body>
 </html>
