--- a/electron/public/eventSetting.html
+++ b/electron/public/eventSetting.html
@@ -13,7 +13,7 @@
         <input type="text" id="eventCode" />
       </p>
       <p>
-        <button id="enter">setting</button>
+        <button id="eventSettingButton">setting</button>
       </p>
     </div>
     <!-- You can also require other files to run in this process -->
