--- a/electron/public/eventCreate.html
+++ b/electron/public/eventCreate.html
@@ -9,12 +9,10 @@
   </head>
   <body>
     <div id="input">
-      <p>
-        Emoji : <input type="text" id="emoji" placeholder="👏"/>
-      </p>
-      <p>
-        <button id="enter">Create Event</button>
-      </p>
+      <span class="column-name">Event Name : </span><input type="text" id="eventName" class="column-data" />
+      <span class="column-name">Owner : </span><input type="text" id="eventOwner" class="column-data" />
+      <span class="column-name">Emoji : </span><span class="column-data" ><input type="text" id="emoji" placeholder="👏" /></span>
+      <p><button id="createEventButton">Create Event</button></p>
     </div>
     <div id="created">
       <p id="eventCodeTitle">Event Code</p>
