create url and qr code

--- a/electron/public/eventCreate.html
+++ b/electron/public/eventCreate.html
@@ -15,9 +15,9 @@
       <p><button id="createEventButton">Create Event</button></p>
     </div>
     <div id="created">
-      <p id="eventCodeTitle">Event Code</p>
-      <p id="eventId"></p>
-      <p id="url"></p>
+      <span id="eventCodeTitle">Event Code</span>
+      <span id="url"></span>
+      <img id="qrcode" alt="QRコード">
     </div>
     <!-- You can also require other files to run in this process -->
     <script src="./eventCreate.js"></script>
